Refactor auth and protocols to be combined
This commit updates how auth and protocols work to simplify both and
improve client making decisions around which protocol or auth scheme to
use.

The "protocols" trait is now a list of protocol objects. This makes it
much easier to determine the priority order rather than relying on a
relative quality factor. The "deprecated" and "deprecationReason"
properties were removed from protocols. Model authors can use the
"deprecated" tag if they desire, and we will follow up with a commit
that adds validators that will be able to mark protocols as deprecated
across all models.

The "authentication" trait has been removed and rolled into the
"protocols" trait in the "auth" key. The rationale here is that the
authentication schemes supported by a service are entirely reliant on
the protocol. For example a client can't connect over HTTP Basic auth
using MQTT. "auth" is a simple priority ordered list of auth schemes.
Each protocol lists it's entire list of auth schemes it supports, and
support for the "none" scheme is implicit.

Authentication shemes and protocols no longer support an arbitary map of
settings. This change now requires that any settings used for protocols
or auth must be defined using a trait. This provides a much stronger
contract for the values that need to be provided, and it allows
configuration to be shared across multiple protocols/auth schemes. A
follow-up commit will be made that adds a validator that enforces
constraints like requiring a set of traits when an auth or protocol
scheme are set.

The "authenticationSchemes" trait has been renamed to "auth". It works
pretty much the same way as it did before.

Foo